# src/api_service/pkg/api/handlers.go
@@ -3,7 +3,7 @@ package api
 import (
 	"errors"
 	"fmt"
-	"proto/pkg/urlspb"
+	"proto/pkg/urlpb"
 	"time"
 
 	"net/http"
@@ -55,7 +55,7 @@ func (s *Service) RedirectToUrl(c *gin.Context) {
 // @Consume     application/json
 // @Produce     application/json
 // @Param       urlId path     string true "url id"
-// @Success     200   {object} UrlDTO
+// @Success     200   {object} UrlDto
 // @Failure     404   {object} ErrorResponse
 // @Failure     500   {object} ErrorResponse
 // @Router      /url/{urlId} [GET]
@@ -71,7 +71,7 @@ func (s *Service) GetUrl(c *gin.Context) {
 // @Consume     application/json
 // @Produce     application/json
 // @Param       url body     CreateUrlRequest true "url"
-// @Success     200 {object} UrlDTO
+// @Success     200 {object} UrlDto
 // @Failure     400 {object} ErrorResponse
 // @Failure     500 {object} ErrorResponse
 // @Router      /url [POST]
@@ -81,21 +81,21 @@ func (s *Service) PostUrl(c *gin.Context) {
 		c.JSON(http.StatusBadRequest, ErrorResponse{Error: err.Error()})
 		return
 	}
-	if s.UrlsServiceOk.Load() {
+	if s.UrlServiceOk.Load() {
 		ctx, cancel := context.WithTimeout(context.Background(), time.Second)
 		defer cancel()
-		urlRes, err := s.UrlsClient.CreateUrl(ctx, &urlspb.CreateUrlRequest{RedirectUrl: body.RedirectUrl})
+		urlRes, err := s.UrlClient.CreateUrl(ctx, &urlpb.CreateUrlRequest{RedirectUrl: body.RedirectUrl})
 		if err != nil {
 			c.JSON(http.StatusBadRequest, ErrorResponse{Error: err.Error()})
 			return
 		}
 		s.putInCache(urlRes.GetUrlId(), body.RedirectUrl)
-		urlDTO := UrlDTO{
+		UrlDto := UrlDto{
 			UrlId:       urlRes.GetUrlId(),
 			RedirectUrl: body.RedirectUrl,
 			NewUrl:      fmt.Sprintf("%s/%s", s.Addr, urlRes.UrlId),
 		}
-		c.JSON(http.StatusOK, urlDTO)
+		c.JSON(http.StatusOK, UrlDto)
 		return
 	}
 	c.JSON(http.StatusInternalServerError, ErrorResponse{Error: ErrServicesUnavailable.Error()})
@@ -116,12 +116,12 @@ func (s *Service) makeGetUrlResponse(c *gin.Context, redirect bool) {
 	if redirect {
 		c.Redirect(http.StatusFound, redirectUrl)
 	} else {
-		urlDTO := UrlDTO{
+		UrlDto := UrlDto{
 			UrlId:       urlId,
 			RedirectUrl: redirectUrl,
 			NewUrl:      fmt.Sprintf("%s/%s", s.Addr, urlId),
 		}
-		c.JSON(http.StatusOK, urlDTO)
+		c.JSON(http.StatusOK, UrlDto)
 	}
 }
 
@@ -129,10 +129,10 @@ func (s *Service) getRedirectUrl(urlId string) (string, error) {
 	if redirectUrl, err := s.getFromCache(urlId); err == nil {
 		return redirectUrl, nil
 	}
-	if s.UrlsServiceOk.Load() {
+	if s.UrlServiceOk.Load() {
 		ctx, cancel := context.WithTimeout(context.Background(), time.Second)
 		defer cancel()
-		urlRes, err := s.UrlsClient.GetUrl(ctx, &urlspb.GetUrlRequest{UrlId: urlId})
+		urlRes, err := s.UrlClient.GetUrl(ctx, &urlpb.GetUrlRequest{UrlId: urlId})
 		if err != nil {
 			return "", err
 		}
